# github-credential-broker

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: broker-smoke-test.yml  ci.yml  container.yml
config/: policy.example.yml  policy.yml
infra/terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/terraform/templates/: cloud-init.yaml.tftpl
scripts/: deploy-policy.sh
src/github_credential_broker/: __init__.py  app.py  audit.py  cli.py  errors.py  oidc.py  policy.py  policy_lint.py  rate_limit.py  secret_store.py  settings.py
tests/: conftest.py  test_app.py  test_cli.py  test_oidc.py  test_policy.py  test_secret_store.py
